--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,9 +1,14 @@
 <h1>
-  {{title}}
+	{{title}}
 </h1>
 
-<sebm-google-map [latitude]="lat" [longitude]="lng" [zoom]="13">
-	<sebm-google-map-marker [latitude]="lat" [longitude]="lng">
+<sebm-google-map
+  [latitude]="lat"
+  [longitude]="lng"
+  [zoom]="13"
+	[disableDefaultUI]="true">
+
+  <sebm-google-map-marker [latitude]="lat" [longitude]="lng">
 
 	</sebm-google-map-marker>
 </sebm-google-map>
