--- a/src/styles.css
+++ b/src/styles.css
@@ -1,5 +1,6 @@
 /* You can add global styles to this file, and also import other style files */
-body, html{
-  width: 100%;
-  height: 100%;
+
+h1,h2,h3,h4,h5,h6,
+p,div,input{
+  font-family: 'Open Sans',"微軟正黑體";
 }
